Fix alignment of right-floated content in .panel-title

--- a/app/assets/stylesheets/manage.css.scss
+++ b/app/assets/stylesheets/manage.css.scss
@@ -79,6 +79,10 @@
     }
 }
 
+.panel-title > .pull-right {
+    margin-top: -5px;
+}
+
 @media screen and (min-width: 768px) {
     .sidebar {
         position: fixed;
